# pipes

./: CONTRIBUTORS  pipes.cabal
src/Control/: Pipe.hs
src/Control/Pipe/: Binary.hs  Common.hs  List.hs  Text.hs
src/Control/Pipe/Binary/: IO.hs
src/Control/Pipe/Text/: Encoding.hs  IO.hs
